--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <title>React FTW!</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-  <div id="app"></div>
+        <div class="container-fluid">
 
-  <script src="bundle.js"></script>
+
+                <div class="header">
+                  <h1>This is a header</h1>
+                </div>
+
+              <div class="content">
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="categories">
+                      <h3>Categories</h3>
+                        <ul>
+                          <li>Wombles</li>
+                          <li>Leprechauns</li>
+                          <li>Unicorns</li>
+                          <li>Fairies</li>
+                          <li>Goblins</li>
+                          <li>Trolls</li>
+                        </ul>
+                    </div>
+                  </div>
+                  <div class="col-sm-8">
+                      <div class="nav">
+                          <a href="/Home">HOME</a>
+                          <a href="/home">Product Listing</a>
+                          <a href="/ProductDetails">Product Details</a>
+                      </div>
+                      <div class="home">
+                        <p>This is the home text</p>
+                        <p>Lorem ipsum dolor sit amet, ad qui minimum vituperata consequuntur,
+                          magna quaeque mel ut, eu euismod volutpat efficiantur qui.
+                          Te sea epicuri propriae incorrupte, eos viris vivendo oportere eu, per summo efficiantur ad.
+                          At suas omnis mea. Audire fabulas recteque ex est, putent scriptorem duo ad,
+                          commune indoctum definitionem eos an.
+                          Vis tollit bonorum explicari ex, ea qui sumo consectetuer.
+                          Usu ad fabellas lucilius assentior, his everti intellegam reformidans.</p>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
+                  <div class="footer">
+                    <h3>This is a footer</h3>
+                  </div>
+
+                </div>
+
+
+
+
 </body>
 </html>
